2차 및 3차 최종 커밋